tests/conformance/errors/repeated_calls_stack_reset/input.dgm
fn fail() {
  undefined_var
}

try {
  fail()
} catch (err) {
  writ(err)
}

fail()
